# turtlebot

./: README.md
catkin_ws/src/: vergina_22_12_06.pgm  vergina_22_12_06.yaml
catkin_ws/src/odom_logger/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/odom_logger/config/: params.yaml
catkin_ws/src/odom_logger/include/: odom_logger.h
catkin_ws/src/odom_logger/launch/: avanti_odom_logger.launch
catkin_ws/src/odom_logger/results/: odometry.txt
catkin_ws/src/odom_logger/src/: odom_logger.cpp  odom_logger_node.cpp
catkin_ws/src/relief-amcl-mod/: CMakeLists.txt  package.xml
catkin_ws/src/relief-amcl-mod/configuration_files/: amcl_params.yaml
catkin_ws/src/relief-amcl-mod/include/relief_amcl_mod/pf/: pf.h
catkin_ws/src/relief-amcl-mod/src/: relief_amcl_mod_node.cpp
catkin_ws/src/relief-amcl-mod/src/relief_amcl_mod/map/: map.c  map_cspace.cpp  map_draw.c  map_range.c  map_store.c
catkin_ws/src/relief-amcl-mod/src/relief_amcl_mod/pf/: pf.c  pf_kdtree.c  pf_pdf.c  pf_vector.c
catkin_ws/src/relief-amcl-mod/src/relief_amcl_mod/sensors/: amcl_laser.cpp  amcl_odom.cpp  amcl_sensor.cpp
catkin_ws/src/relief-devel/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/relief-devel/doc/: nuc_setup.txt
catkin_ws/src/relief-devel/launch/: avanti_live.launch  avanti_simulation.launch
catkin_ws/src/relief-devel/maps/: ag10_0.01.pgm  corridor.ot  corridor_0.005.yaml  corridor_0.01.pgm  corridor_0.01.yaml  corridor_0.025.yaml  corridor_rtabmap_0.01.binvox.bt  corridor_rtabmap_0.01.pgm  corridor_rtabmap_0.01.yaml  csal_072020_0.01.pgm  csal_072020_0.01.yaml  csal_10072020_0.01.yaml  csal_24072020_0.01.pgm  csal_24072020_0.01.yaml  csal_gmapping_0.02.pgm  csal_gmapping_0.02.yaml  csal_karto2_0.01.yaml  csal_karto3_0.01.pgm  csal_karto3_0.01.yaml  csal_karto_0.02.pgm  csal_karto_0.02.yaml  csal_rtabmap_exp_1_0.01.pgm  csal_rtabmap_exp_1_0.01.yaml  csal_rtabmap_exp_2_0.01.pgm  csal_rtabmap_exp_2_0.01.yaml  csal_rtabmap_exp_3_0.01.pgm  csal_rtabmap_exp_3_0.01.yaml  csal_rtabmap_exp_b2b_0.01.pgm  csal_rtabmap_exp_b2b_0.01.yaml  csal_rtabmap_exp_b_single_0.01.pgm  csal_rtabmap_exp_b_single_0.01.yaml  csal_rtabmap_exp_f2f_0.01.pgm  csal_rtabmap_exp_f2f_0.01.yaml  csal_rtabmap_exp_fence_0.01.pgm  csal_rtabmap_exp_fence_0.01.yaml  csal_rtabmap_exp_horizontal_0.01.pgm  csal_rtabmap_exp_horizontal_0.01.yaml  cylinder_0.01.pgm  cylinder_0.01.yaml  fmt_corridor_0.01.yaml  (+26 more)
catkin_ws/src/relief-devel/msg/: PoseRPYWithCovarianceStamped.msg
catkin_ws/src/relief-devel/src/odom_tests_node/: CMakeLists.txt  odom_plot.m  odom_test  odom_tests.cpp  odom_tests_node.cpp
catkin_ws/src/relief-devel/src/pipeline_debug_quaternion_to_rpy_node/: CMakeLists.txt  pipeline_debug_quaternion_to_rpy.cpp  pipeline_debug_quaternion_to_rpy_node.cpp
catkin_ws/src/relief-pipeline-localisation/: CMakeLists.txt  package.xml
catkin_ws/src/relief-pipeline-localisation/src/pipeline_localisation_node/: CMakeLists.txt  pipeline_localisation.cpp  pipeline_localisation_node.cpp
catkin_ws/src/relief-rfid-antennas-poses-logger/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/relief-rfid-detection/: CMakeLists.txt  Readme.md  TAG_ENUMERATION.csv  package.xml
catkin_ws/src/relief-rfid-detection/application/: Makefile  SCMREV  TIME_SYNCHRONISATION_GUIDE.txt  VERSION  cap_description.in  speedway_embedded_example_backup.cpp
catkin_ws/src/relief-rfid-detection/application/cap/: speedwayr_arm
catkin_ws/src/relief-rfid-detection/application/include/: out_impinj_ltkcpp.h  out_ltkcpp.h  version.inc
catkin_ws/src/relief-rfid-detection/application_java_001625127C5A/: mySettings.txt
catkin_ws/src/relief-rfid-detection/launch/: localise_rfid_tags.launch
catkin_ws/src/relief-rfid-detection/params/: rb1_antennas_poses_filelist.yaml  rb1_measurements_filelist.yaml  turtlebot_antennas_poses_filelist.yaml  turtlebot_measurements_filelist.yaml
catkin_ws/src/relief-rfid-detection/results/: rfid_locations.txt
catkin_ws/src/relief-rfid-detection/rfid_localisation/: classes.py  functions_app.py  functions_estimate_location.py  functions_for_app.py  functions_main.py  functions_parser.py  functions_phase_unwrapping.py  philotheou_calling.py  rfid_localisation_main.py  rfid_localisation_node.py
catkin_ws/src/relief-rfid-detection/rfid_localisation/old_code/: PhaseUnwrapping.py  rfid_localisation_node.py
catkin_ws/src/relief-rfid-detection/rfid_localisation_old/: classes.py  functions_estimate_location.py  functions_main.py  functions_parser.py  functions_phase_unwrapping.py  philotheou_calling.py  rfid_localisation_main.py  rfid_localisation_node.py
catkin_ws/src/relief-rfid-detection/rfid_localisation_old/old_code/: PhaseReLock.py  Tags_Infos.txt  rfid_localisation.py
catkin_ws/src/relief-rfid-visualisation/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/relief-rfid-visualisation/cfg/: relief_rfid_visualisation_cfg.cfg
catkin_ws/src/relief-rfid-visualisation/imgs/: README.md
catkin_ws/src/relief-rfid-visualisation/include/: relief_rfid_visualisation.h
catkin_ws/src/relief-rfid-visualisation/launch/: avanti_visualisation.launch
catkin_ws/src/relief-rfid-visualisation/params/: types_images.yaml
catkin_ws/src/relief-rfid-visualisation/rviz/: rfid_conf.rviz
catkin_ws/src/relief-rfid-visualisation/src/: relief_rfid_visualisation.cpp  relief_rfid_visualisation_node.cpp
catkin_ws/src/relief-rfid-visualisation/srv/: VisualiseThisEPC.srv  VisualiseThisType.srv
catkin_ws/src/relief-rfid-visualisation/tag_information/: README.md  tag_info.txt  tag_info_proper.txt
catkin_ws/src/relief-turtlebot-packages/relief_turtlebot_packages/: CMakeLists.txt  package.xml
catkin_ws/src/relief_rfid_image_publisher/: CMakeLists.txt  nodelet_plugins.xml  package.xml
relief-support-files/: README.md
relief-support-files/configuration_files/: rb1_antimicro_conf.gamecontroller.amgp  turtlebot_antimicro_conf.gamecontroller.amgp
relief-support-files/scripts/: clear_logs.sh  kill_reader.sh  kill_robot.sh  run_rb1.sh  run_turtlebot.sh  run_turtlebot_reader.sh  run_turtlebot_rfid_localisation.sh
(+147 files in other folders)
